--- a/req-cuti.html
+++ b/req-cuti.html
@@ -2,145 +2,173 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>INPUT NIK SEBELUM REQUEST</title>
+  <title>REQUEST CUTI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #2193b0, #6dd5ed);
       margin: 0;
-      padding: 0;
+      font-family: "Poppins", "Segoe UI", Arial, sans-serif;
+      background: linear-gradient(135deg, #2193b0, #6dd5ed);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
+
     .container {
       background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+      padding: 35px 30px;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.18);
       width: 100%;
-      max-width: 420px;
+      max-width: 520px;
       text-align: center;
     }
-    h2 {
+
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 10px;
+      font-weight: 800;
       background: linear-gradient(90deg, #2193b0, #6dd5ed);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      color: #444;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
+
+    .status {
+      font-size: 1.4rem;
       font-weight: bold;
       margin-bottom: 20px;
     }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-      color: #333;
-      text-align: left;
+
+    .status.open { color: #28a745; }
+    .status.close { color: #dc3545; }
+
+    .countdown {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 15px;
     }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-top: 8px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 18px;
-      border: none;
-      border-radius: 8px;
-      background: #2193b0;
+
+    .time-box {
+      background: linear-gradient(135deg, #2193b0, #6dd5ed);
+      border-radius: 12px;
+      padding: 18px 10px;
       color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-      width: 100%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     }
-    button:hover {
-      background: #176d7a;
+
+    .number {
+      font-size: 2.6rem;
+      font-weight: 800;
     }
-    #hasil {
+
+    .label {
+      font-size: 0.8rem;
+      opacity: 0.9;
+    }
+
+    .note {
       margin-top: 20px;
-      font-weight: bold;
-      color: #444;
-    }
-    #formCutiBtn {
-      display: none;
-      background: #28a745;
-    }
-    #formCutiBtn:hover {
-      background: #1e7e34;
+      font-size: 0.85rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h2>INPUT NIK SEBELUM REQUEST</h2>
+<div class="container">
+  <h1>REQUEST CUTI</h1>
+  <div class="subtitle">Periode pengajuan tanggal <strong>1–15</strong> setiap bulan</div>
 
-    <label for="nik">Masukkan NIK:</label>
-    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
+  <div id="statusText" class="status"></div>
 
-    <button onclick="cekNIK()">Cek Nama & Group</button>
-
-    <div id="hasil"></div>
-
-    <button id="formCutiBtn" onclick="lanjutForm()">Lanjut ke Form REQUEST</button>
+  <div id="countdown" class="countdown">
+    <div class="time-box">
+      <div class="number" id="days">0</div>
+      <div class="label">HARI</div>
+    </div>
+    <div class="time-box">
+      <div class="number" id="hours">0</div>
+      <div class="label">JAM</div>
+    </div>
+    <div class="time-box">
+      <div class="number" id="minutes">0</div>
+      <div class="label">MENIT</div>
+    </div>
+    <div class="time-box">
+      <div class="number" id="seconds">0</div>
+      <div class="label">DETIK</div>
+    </div>
   </div>
 
-  <script>
-    async function cekNIK() {
-      const nik = document.getElementById("nik").value.trim();
-      const hasil = document.getElementById("hasil");
-      const btnForm = document.getElementById("formCutiBtn");
+  <div class="note">
+    Halaman akan otomatis berpindah saat request dibuka.
+  </div>
+</div>
 
-      if (!nik) {
-        hasil.innerText = "⚠️ Silakan masukkan NIK.";
-        btnForm.style.display = "none";
-        return;
-      }
+<script>
+  // ✅ URL TUJUAN AUTO REDIRECT
+  const INPUT_URL = "https://hong-ark.github.io/req-cuti/INPUTNIK.html";
 
-      hasil.innerText = "🔄 Mencari data...";
-      btnForm.style.display = "none";
+  function getNextOpenDate() {
+    const now = new Date();
+    return new Date(
+      now.getFullYear(),
+      now.getMonth() + 1,
+      1,
+      0, 0, 0
+    );
+  }
 
-      try {
-        // Ganti URL berikut dengan Apps Script milik Anda
-        const response = await fetch(
-          `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`
-        );
-        const data = await response.json();
+  function updatePage() {
+    const now = new Date();
+    const day = now.getDate();
 
-        if (data.nama && data.group) {
-          hasil.innerHTML = `
-            ✅ Nama: <strong>${data.nama}</strong><br>
-            ✅ Group: <strong>${data.group}</strong>
-          `;
-          btnForm.style.display = "inline-block";
-          btnForm.dataset.nama = data.nama;
-          btnForm.dataset.nik = nik;
-          btnForm.dataset.group = data.group;
-        } else {
-          hasil.innerText = "❌ NIK tidak ditemukan di database.";
-        }
-      } catch (err) {
-        hasil.innerText = "❌ Gagal mengambil data.";
-        console.error(err);
-      }
+    const statusText = document.getElementById("statusText");
+    const countdown = document.getElementById("countdown");
+
+    // 🟢 OPEN: TANGGAL 1–15
+    if (day >= 1 && day <= 15) {
+      statusText.textContent = "🟢 REQUEST OPEN";
+      statusText.className = "status open";
+      countdown.style.display = "none";
+
+      setTimeout(() => {
+        window.location.href = INPUT_URL;
+      }, 1500);
+
+      return;
     }
 
-    function lanjutForm() {
-      const btn = document.getElementById("formCutiBtn");
-      const nama = encodeURIComponent(btn.dataset.nama);
-      const nik = encodeURIComponent(btn.dataset.nik);
-      const group = encodeURIComponent(btn.dataset.group);
+    // 🔴 CLOSE: TANGGAL 16 KE ATAS
+    statusText.textContent = "🔴 REQUEST CLOSE";
+    statusText.className = "status close";
+    countdown.style.display = "grid";
 
-      // Redirect ke form-request.html dengan parameter query string
-      const formURL = "form-request.html";
-      window.location.href = `${formURL}?nik=${nik}&nama=${nama}&group=${group}`;
-    }
-  </script>
+    const target = getNextOpenDate();
+    const diff = target - now;
+
+    document.getElementById("days").textContent =
+      Math.floor(diff / (1000 * 60 * 60 * 24));
+    document.getElementById("hours").textContent =
+      Math.floor((diff / (1000 * 60 * 60)) % 24);
+    document.getElementById("minutes").textContent =
+      Math.floor((diff / (1000 * 60)) % 60);
+    document.getElementById("seconds").textContent =
+      Math.floor((diff / 1000) % 60);
+  }
+
+  updatePage();
+  setInterval(updatePage, 1000);
+</script>
 
 </body>
 </html>
-
