--- a/req-cuti.html
+++ b/req-cuti.html
@@ -85,8 +85,8 @@
 <body>
 
 <div class="container">
-  <h1>REQUEST CUTI</h1>
-  <div class="subtitle">Periode pengajuan tanggal <strong>1–15</strong> setiap bulan</div>
+  <h1>IKAN HIU MAKAN TOMAT... </h1>
+  <div class="subtitle">OPEN REQUEST TANGGAL <strong>1–15</strong> SETIAP BULAN</div>
 
   <div id="statusText" class="status"></div>
 
@@ -172,3 +172,4 @@
 
 </body>
 </html>
+
