--- a/req-cuti.html
+++ b/req-cuti.html
@@ -110,7 +110,7 @@
   </div>
 
   <div class="note">
-    Halaman akan otomatis berpindah saat request dibuka.
+    Halaman request akan otomatis terbuka jika sudah tiba saatnya
   </div>
 </div>
 
@@ -149,7 +149,7 @@
     }
 
     // 🔴 CLOSE: TANGGAL 16 KE ATAS
-    statusText.textContent = "🔴 REQUEST CLOSE";
+    statusText.textContent = "🔴 REQUEST CLOSE, AKAN DIBUKA KEMBALI DALAM HITUNGAN";
     statusText.className = "status close";
     countdown.style.display = "grid";
 
@@ -172,4 +172,5 @@
 
 </body>
 </html>
+
 
