--- a/req-cuti.html
+++ b/req-cuti.html
@@ -149,7 +149,7 @@
     }
 
     // 🔴 CLOSE: TANGGAL 16 KE ATAS
-    statusText.textContent = "🔴 REQUEST CLOSE, AKAN DIBUKA KEMBALI DALAM HITUNGAN";
+    statusText.textContent = "🔴 REQUEST AKAN DIBUKA KEMBALI DALAM HITUNGAN:";
     statusText.className = "status close";
     countdown.style.display = "grid";
 
@@ -172,5 +172,6 @@
 
 </body>
 </html>
+
 
 
