--- a/req-cuti.html
+++ b/req-cuti.html
@@ -110,7 +110,7 @@
   </div>
 
   <div class="note">
-    Halaman request akan otomatis terbuka jika sudah tiba saatnya
+    Form akan otomatis terbuka jika sudah tiba saatnya
   </div>
 </div>
 
@@ -172,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
