--- a/req-cuti.html
+++ b/req-cuti.html
@@ -198,7 +198,7 @@
     badge.textContent = "CLOSE";
     badge.className = "badge close";
 
-    statusText.textContent = "Request akan dibuka kembali dalam hitungan:";
+    statusText.textContent = "Akan dibuka kembali dalam hitungan:";
     countdown.style.display = "grid";
 
     const target = getNextOpenDate();
@@ -220,3 +220,4 @@
 
 </body>
 </html>
+
