--- a/req-cuti.html
+++ b/req-cuti.html
@@ -129,9 +129,6 @@
     OPEN REQUEST TANGGAL 1–15 SETIAP BULAN
   </div>
 
-  <div class="tagline">
-    IKAN HIU MAKAN TOMAT...
-  </div>
 
   <div id="badge" class="badge"></div>
 
@@ -195,7 +192,7 @@
     }
 
     // 🔴 CLOSE (16+)
-    badge.textContent = "CLOSE";
+    badge.textContent = "REQ - CLOSE";
     badge.className = "badge close";
 
     statusText.textContent = "Akan dibuka kembali dalam hitungan:";
@@ -220,4 +217,5 @@
 
 </body>
 </html>
+
 
