--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -120,7 +120,7 @@
        =============================== */
     const day = new Date().getDate();
     if (day < 1 || day > 15) {
-      window.location.href = "https://hong-ark.github.io/req-cuti/";
+      window.location.href = "https://hong-ark.github.io/req-cuti/req-cuti.html";
     }
 
     /* ===============================
@@ -186,3 +186,4 @@
 
 </body>
 </html>
+
